fixed page width being too wide

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -61,6 +61,7 @@ body {
   padding: 0;
   min-height: 100%;
   height: 100%;
+  max-width: 100vw;
   background: var(--clr-primary);
   color: var(--clr-light);
   font-family: var(--ff-primary);
@@ -227,6 +228,7 @@ section {
 .intro {
   /* margin-top: 6rem; */
   height: 100vh;
+  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
